--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-# Generated directories:
-.nyc_output/
-coverage/
-dist/
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependencies
 node_modules/
 
-# Project files:
-*.sublime-*
+# Coverage
+coverage
+
+# Transpiled files
+build/
+
+# VS Code
+.vscode
+!.vscode/tasks.js
+
+# JetBrains IDEs
+.idea/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Misc
+.DS_Store
