--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "~18",
     "@typescript-eslint/eslint-plugin": "~5.59",
     "@typescript-eslint/parser": "~5.59",
+    "concurrently": "^8.2.0",
     "eslint": "~8.38",
     "eslint-config-prettier": "~8.8",
     "eslint-plugin-jest": "~27.2",
@@ -22,7 +23,8 @@
     "typescript": "~5.0"
   },
   "scripts": {
-    "dev": "node --watch build/src/main.js",
+    "start:watch": "node --watch build/src/main.js",
+    "dev": "concurrently --kill-others \"npm run build:watch\" \"npm run start:watch\"",
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
@@ -37,6 +39,7 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "express": "^4.18.2",
     "socket.io": "^4.7.1",
     "tslib": "~2.5"
   },
